# guia-ne

./: .gitignore  Cópia_de_ova_teste.ipynb  README.md  config.yaml  extrator.py  main.py  main_batch.py  motor_metadados.py  pyproject.toml
data/: 2724310018894469.xml  lattes_amostra_metadata.csv
nbs/: cnpq_lattes_discovery.ipynb
src/core/: batch_processor.py  file_manager.py  lattes_zip_processor.py  oci_client.py  stream_processor.py
src/utils/: config_loader.py  exceptions.py  logger.py  validators.py
tests/: conftest.py  test_lattes_zip_processor.py
